trying to fix header on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@ html {
 
 header{
   padding: 20px;
+  width:100%;
   margin-left: -10px;
   margin-right: -10px;
   margin-top: -10px;
